Issue #3956: Prevent site from getting stuck in maintenance mode when doing core updates.

--- a/core/themes/seven/css/style.css
+++ b/core/themes/seven/css/style.css
@@ -977,6 +977,7 @@ input.form-submit:active {
   -moz-box-shadow: 0 0 5px rgb(220, 220, 220);
   box-shadow: 0 0 5px rgb(220, 220, 220);
 }
+a.button-primary,
 input.button-primary,
 button.button-primary {
   color: white;
